# auxiliar-de-produtos

./: .env.example  .gitignore  README.md  pesquisa-produtos.bat  pyproject.toml  render.yaml
pesquisa_produtos/cli/: commands.py
pesquisa_produtos/models/: __init__.py  product.py
pesquisa_produtos/scrapers/: __init__.py  base.py  magalu.py  mercadolivre.py  search.py
pesquisa_produtos/utils/: __init__.py  cache.py  display.py  rate_limiter.py
web/: main.py
web/templates/: index.html
